Changes after 2.6.2 (updated Apr  1, 2014):

- CPU
  - Bugfixes for CPU emulation correctness (critical fixes for XSAVE, VMX, TBM/BMI and RDRAND instructions)
  - Implemented FCS/FDS Deprecation CPU feature
  - Implemented SHA instructions emulation
  - Implemented XSAVEC instruction emulation and XINUSE optimization in the XSAVEOPT instruction
  - Implemented AVX-512 instructions emulation (experimental)
  ! CPUDB: Added Intel(R) Core(TM) i7-4770 CPU (Haswell) configuration to CPUDB
  ! CPUDB: Added AMD A8-5600K APU (Trinity) configuration to CPUDB

  - Replace 'SSE' and 'AVX' .bochsrc option with single 'SIMD' option which controls presence
    of all CPU SIMD extensions from SSE to AVX-512

  - Extra 5-10% emulation speedup with new trace linking optimization. The optimization
    is enabled by default when configuring with --enable-all-optimizations option,
    to disable trace linking optimization configure with --disable-trace-linking.
    The optimization require to compile Bochs with at least -O2 optimization level on gcc.

- Bochs Debugger and Instrumentation
  - Added disam for Bochs internal instruction representation, especially useful for instrumentation
  - Updated definition of instrumentation callbacks, see description in
    instrumentation.txt / Fixed instrumentation examples
  - added capability to use the gui debugger output window as a log viewer

- General
  - Increased max. device log prefix size to 6 and added / modified prefixes
  - plugin version now uses the native DLL handling code for all Windows ports

- Configure and compile
  - configure and compilation fixes for Cygwin and Visual Studio environment
  - configure option --enable-cdrom now only controls the presence of
    platform-specific code for device access

- Config interface
  - Added global sound control option for the driver and wave input/output
  - Added new bochsrc option to control the speaker output mode